--- a/src/ABSWorlds/ABSWorlds.csproj
+++ b/src/ABSWorlds/ABSWorlds.csproj
@@ -34,6 +34,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\ABSWorlds.Common\ABSWorlds.Common.csproj" />
+      <ProjectReference Include="..\ABSWorlds.Common\ABSWorlds.Common.csproj" />
     </ItemGroup>
 </Project>
