--- a/src/ABSWorlds.Common/ABSWorlds.Common.csproj
+++ b/src/ABSWorlds.Common/ABSWorlds.Common.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="FileUtils\" />
+      <Folder Include="FileUtils\Readers\" />
     </ItemGroup>
 
 </Project>
